--- a/charts/todo-vue/templates/service.yaml
+++ b/charts/todo-vue/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "todo-vue.fullname" . }}
   labels:
     {{- include "todo-vue.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   selector:
@@ -13,3 +17,6 @@ spec:
       port: {{ .Values.service.port }}
       protocol: TCP
       targetPort: http
+      {{- if and (eq .Values.service.type "NodePort") .Values.service.nodePort }}
+      nodePort: {{ .Values.service.nodePort }}
+      {{- end }}
