Use kubeconform for rendering check

--- a/.github/workflows/ci-helm-oci.yml
+++ b/.github/workflows/ci-helm-oci.yml
@@ -183,18 +183,18 @@ jobs:
           set -euo pipefail
           helm lint "charts/${{ matrix.chart_dir }}"
 
-      - name: Install kubeval
+      - name: Install kubeconform
         shell: bash
         run: |
           set -euo pipefail
 
-          KUBEVAL_VERSION="0.16.1"
-          curl -sSL -o /tmp/kubeval.tar.gz "https://github.com/instrumenta/kubeval/releases/download/v${KUBEVAL_VERSION}/kubeval-linux-amd64.tar.gz"
-          tar -C /tmp -xzf /tmp/kubeval.tar.gz
-          sudo mv /tmp/kubeval /usr/local/bin/kubeval
-          kubeval --version
+          KUBECONFORM_VERSION="0.6.6"
+          curl -sSL -o /tmp/kubeconform.tar.gz "https://github.com/yannh/kubeconform/releases/download/v${KUBECONFORM_VERSION}/kubeconform-linux-amd64.tar.gz"
+          tar -C /tmp -xzf /tmp/kubeconform.tar.gz
+          sudo mv /tmp/kubeconform /usr/local/bin/kubeconform
+          kubeconform -v
 
-      - name: Helm template + kubeval (render checks, no cluster)
+      - name: Helm template + kubeconform (render checks, no cluster)
         shell: bash
         run: |
           set -euo pipefail
@@ -205,7 +205,7 @@ jobs:
           # Render with chart defaults and validate known Kubernetes resource schemas.
           # CRDs (for example, OpenShift Route) are ignored.
           helm template "${release}" "${chart_path}" --namespace default \
-            | kubeval --strict --ignore-missing-schemas
+            | kubeconform -strict -ignore-missing-schemas -summary
 
       - name: Package and push (OCI path, lowercase)
         shell: bash
