Disable creating a new service account (use default service)

--- a/charts/todo-vue/values.yaml
+++ b/charts/todo-vue/values.yaml
@@ -13,8 +13,8 @@ image:
 imagePullSecrets: []
 
 serviceAccount:
-  create: true
-  name: ""
+  create: false
+  name: default
 
 podAnnotations: {}
 podLabels: {}
